fix url of the http server