@@ -4,6 +4,8 @@ import com.sun.net.httpserver.HttpContext;
 import com.sun.net.httpserver.HttpServer;
 import java.io.IOException;
 import java.net.InetSocketAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import magpiebridge.core.MagpieServer;
 import magpiebridge.core.ServerConfiguration;
@@ -25,11 +27,11 @@ public class MagpieHttpServer {
       HttpContext context = server.createContext("/config");
       context.setHandler(new MagpieHttpHandler(magpieServer, server.getAddress().toString()));
       server.start();
-      return new URL("http", server.getAddress().toString() + "/config", null).toString();
-    } catch (IOException e) {
+      return new URI("http", server.getAddress().toString()+"/config",null).toURL().toString();
+    } catch (IOException|URISyntaxException e) {
       MagpieServer.ExceptionLogger.log(e);
       e.printStackTrace();
-    }
+    } 
     return null;
   }
 }
